<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomizedFilmInfoActivity">

    <EditText
        android:id="@+id/titleID"
        android:layout_width="332dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:hint="@string/filmTitleHint"/>

    <EditText
        android:id="@+id/directorID"
        android:layout_width="332dp"
        android:layout_height="80dp"
        android:layout_below="@+id/titleID"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:hint="@string/filmDirectorHint"/>

    <EditText
        android:id="@+id/dateID"
        android:layout_width="332dp"
        android:layout_height="80dp"
        android:layout_below="@+id/directorID"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:hint="@string/filmDateHint"
        android:inputType="date"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Submit"
        android:onClick="onSubmitClick"/>

</RelativeLayout>