<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilmInfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/filmImageID"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/filmTitleID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filmImageID"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/filmTitle" />

    <TextView
        android:id="@+id/filmDateID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filmDirectorID"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center_horizontal"
        android:text="@string/filmDate" />

    <TextView
        android:id="@+id/filmDirectorID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filmImageID"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/filmDirector" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fdeletBtn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:onClick="onAddBtnClick"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@android:color/background_light" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fdeletBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:src="@android:drawable/ic_delete"
        app:backgroundTint="@android:color/background_light" />


</RelativeLayout>